objects/LBU_Code__c.object
<CustomObject>
    <description>This object contains all LBU / ABACUS Reporting Codes</description>
    <fields>
        <fullName>Abacus_Code__c</fullName>
        <label>Abacus Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BU__c</fullName>
        <description>BU Code</description>
        <label>BU</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Load_Year__c</fullName>
        <description>The field to be used for data load activity as part of the ReOrg Business requirements - R4.2</description>
        <label>Data Load Year</label>
        <picklist>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>Division</description>
        <label>Division</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>LBU Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Abacus_Code__c</columns>
        <columns>BU__c</columns>
        <columns>Division__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_DM</fullName>
        <columns>NAME</columns>
        <columns>Abacus_Code__c</columns>
        <columns>BU__c</columns>
        <columns>Division__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Division__c</field>
            <operation>equals</operation>
            <value>DM</value>
        </filters>
        <label>All - DM</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>LBU Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LBU Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>